@@ -1,3 +1,5 @@
+* BUG#8746 Ne pas requittancer un contrat jusqu'à sa date de fin lors de la réactivation
+
 Version 2.0 - 2018-04-13
 * BUG#7704 Rendre les champs disponible au niveau de l'échéancier en lecture seule
 
